--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,14 @@
     <%- include('navBar'); %> <% if (locals.teams) { %>
     <h1>Teams:</h1>
     <% for (const team of teams) { %>
-    <p>ID: <%= team.teamid %>, team name: <%= team.teamname %></p>
+    <ul>
+      <li>
+        <a class="team" href="/team/<%= team.teamid %>"
+          >ID: <%= team.teamid %>, team name: <%= team.teamname %></a
+        >
+      </li>
+    </ul>
+
     <% } %> <% } %>
   </body>
 </html>
