Move new team form into home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,6 @@
         >
       </li>
     </ul>
-
-    <% } %> <% } %>
+    <% } %> <% } %> <%- include('createTeamForm'); %>
   </body>
 </html>
