Implement create player functionality
Add form template file for create player

--- a/views/createTeamForm.ejs
+++ b/views/createTeamForm.ejs
@@ -1,7 +1,7 @@
 <h1>New team:</h1>
 <form action="/team/new" method="POST">
   <label for="teamname"
-    >Team name: <input type="text" name="teamname" id="teamname"
+    >Team name: <input type="text" name="teamname" id="teamname" required
   /></label>
   <button type="submit">Submit</button>
 </form>
