--- a/public/styles.css
+++ b/public/styles.css
@@ -2,10 +2,9 @@ nav ul {
   list-style-type: none;
   display: flex;
   gap: 10px;
-}
-
-li {
-  padding: 0;
+  padding: 10px 20px 0;
+  margin: 0;
+  font-size: 1.5rem;
 }
 
 a,
@@ -17,4 +16,27 @@ a:visited {
 .team,
 .team:visited {
   color: black;
+}
+
+.content {
+  width: 400px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+.teams ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.teams li {
+  border: solid 1px black;
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  width: 300px;
+  font-size: 1.2rem;
 }
