--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <%- include('navBar'); %>
     <div class="container">
       <div class="content">
-        <div class="teams">
+        <div class="list-container">
           <% if (locals.teams) { %>
           <h1>Teams:</h1>
           <% for (const team of teams) { %>
