--- a/views/team.ejs
+++ b/views/team.ejs
@@ -7,17 +7,22 @@
     <title>Players of <%= team.teamname %></title>
   </head>
   <body>
-    <%- include('navBar'); %> <% if (locals.players && players.length > 0) { %>
-    <h1>Players of <%= team.teamname %>:</h1>
-    <% for (const player of players) { %>
-    <ul>
-      <li>
-        Player name: <%= player.name %>, position:
-        <%= player.position %>
-      </li>
-    </ul
-    <% } } else { %>
-    <p>There are no players for <%= team.teamname %>!</p>
-    <% } %> <%- include('createPlayerForm', team); %>
+    <%- include('navBar'); %>
+    <div class="container">
+      <div class="content">
+        <div class="list-container">
+          <% if (locals.players && players.length > 0) { %>
+          <h1>Players of <%= team.teamname %>:</h1>
+          <% for (const player of players) { %>
+          <ul>
+            <li><%= player.name %>, <%= player.position %></li>
+          </ul>
+          <% } } else { %>
+          <p>There are no players for <%= team.teamname %>!</p>
+          <% } %>
+        </div>
+        <%- include('createPlayerForm', team); %>
+      </div>
+    </div>
   </body>
 </html>
