--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
       <div class="content">
         <div class="list-container">
           <% if (locals.teams) { %>
-          <h1>Teams:</h1>
+          <h1>Teams</h1>
           <% for (const team of teams) { %>
           <ul>
             <li>
@@ -27,4 +27,16 @@
       </div>
     </div>
   </body>
+  <footer>
+    Photo by
+    <a
+      href="https://unsplash.com/@fancycrave?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+      >Fancy Crave</a
+    >
+    on
+    <a
+      href="https://unsplash.com/photos/people-watching-soccer-arena-qowyMze7jqg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+      >Unsplash</a
+    >
+  </footer>
 </html>
