--- a/views/createTeamForm.ejs
+++ b/views/createTeamForm.ejs
@@ -1,4 +1,4 @@
-<h1>New team:</h1>
+<h1>Add team</h1>
 <form action="/team/new" method="POST">
   <label for="teamname"
     >Team name: <input type="text" name="teamname" id="teamname" required
