--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --half-transparent: rgba(255, 255, 255, 0.5);
+}
+
 html {
   background-image: url("./stadium.jpg");
   background-size: cover;
@@ -16,8 +20,8 @@ nav ul {
 nav a,
 nav a:visited {
   text-decoration: none;
-  color: rgb(93, 148, 11);
-  background-color: white;
+  color: rgb(13, 61, 150);
+  background-color: var(--half-transparent);
   padding: 5px;
   border-radius: 5px;
 }
@@ -33,7 +37,7 @@ nav a:visited {
 }
 
 .list-container {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .container {
@@ -58,12 +62,13 @@ nav a:visited {
   justify-content: center;
   width: 300px;
   font-size: 1.2rem;
-  padding: 5px;
   border-radius: 5px;
 }
 
 label {
   font-size: 1.2rem;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 button,
@@ -77,6 +82,9 @@ form {
   flex-direction: column;
   align-items: first baseline;
   gap: 10px;
+  background-color: var(--half-transparent);
+  padding: 5px;
+  border-radius: 5px;
 }
 
 button[type="submit"] {
@@ -94,4 +102,17 @@ h1 {
   background-color: white;
   padding: 5px;
   border-radius: 5px;
+  box-shadow: 2px 2px 2px 2px rgb(23, 209, 94);
+}
+
+footer {
+  margin-left: auto;
+  color: white;
+  text-align: right;
+}
+
+footer a,
+footer a:visited {
+  color: rgb(143, 143, 0);
+  text-decoration: none;
 }
