--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="/styles.css" />
     <title>Teams</title>
   </head>
@@ -19,6 +23,10 @@
               <a class="team" href="/team/<%= team.teamid %>"
                 ><%= team.teamname %></a
               >
+              <button class="edit">
+                <i class="fa-solid fa-pen-to-square"></i>
+              </button>
+              <button class="delete"><i class="fa-solid fa-trash"></i></button>
             </li>
           </ul>
           <% } %> <% } %>
