--- a/views/navBar.ejs
+++ b/views/navBar.ejs
@@ -1,5 +1,7 @@
 <nav>
   <ul>
-    <li><a href="/">Home</a></li>
+    <li>
+      <a href="/"><i class="fa-solid fa-house"></i></a>
+    </li>
   </ul>
 </nav>
