--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -23,15 +29,17 @@
               <a class="team" href="/team/<%= team.teamid %>"
                 ><%= team.teamname %></a
               >
-              <button class="edit">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </button>
-              <button class="delete"><i class="fa-solid fa-trash"></i></button>
+              <a class="edit" href="/team/edit/<%= team.teamid %>"
+                ><i class="fa-solid fa-pen-to-square"></i
+              ></a>
+              <a class="delete" href="/team/delete/<%= team.teamid %>"
+                ><i class="fa-solid fa-trash"></i
+              ></a>
             </li>
           </ul>
           <% } %> <% } %>
         </div>
-        <%- include('createTeamForm'); %>
+        <a class="add-team" href="/team/new">Add team</a>
       </div>
     </div>
   </body>
