--- a/public/styles.css
+++ b/public/styles.css
@@ -107,7 +107,7 @@ button[type="submit"] {
   padding: 5px;
   border-radius: 5px;
   box-shadow: var(--content-shadow);
-  background-color: var(--half-transparent);
+  background-color: white;
 }
 
 h1 {
@@ -138,7 +138,7 @@ footer a:visited {
 
 .add-btn {
   padding: 10px;
-  background-color: var(--half-transparent);
+  background-color: white;
   border-radius: 5px;
   font-size: 1.5rem;
   box-shadow: 3px 3px 5px 3px grey;
